# snowdrift

./: .dir-locals.el  .envrc  .ghci  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .sdc  .stripe_keys  Application.hs  BEGINNERS.md  BEGINNERS_VAGRANT.md  BUILD.md  CONTRIBUTING.md  DATABASE-MANAGEMENT.md  Foundation.hs  GIT_BASICS.md  GUIDE.md  Import.hs  Makefile  Model.hs  README.md  SETUP_ARCH.md  SETUP_DEBIAN.md  SETUP_VAGRANT.md  SETUP_WINDOWS.md  SPECS-STORIES.md  Sdm.hs  Settings.hs  Snowdrift.cabal  SnowdriftEmailDaemon.hs  SnowdriftEventHandler.hs  SnowdriftProcessPayments.hs  SnowdriftSendmail.hs  TEXTEDITORS.md  TestHandler.hs  Vagrantfile  Version.hs  brittany.yaml  build.sh  (+22 more)
.github/: ISSUE_TEMPLATE.md
Data/: Filter.hs  Order.hs
Handler/: About.hs  Application.hs  Applications.hs  BuildFeed.hs  Comment.hs  Committee.hs  Contact.hs  Discussion.hs  Donate.hs  Faq.hs  Home.hs  HonorPledge.hs  Image.hs  Invitation.hs  Invite.hs  JsLicense.hs  License.hs  MarkdownTutorial.hs  Messages.hs  Notification.hs  PostLogin.hs  Privacy.hs  Project.hs  ProjectBlog.hs  ProjectSignup.hs  RepoFeed.hs  ResetPassword.hs  SnowdriftEvent.hs  Tags.hs  Tickets.hs  ToU.hs  Tos.hs  Trademarks.hs  UpdateShares.hs  User.hs  UserBalance.hs  UserPledges.hs  Utils.hs  Volunteer.hs  Who.hs  (+2 more)
Model/: AnnotatedTag.hs  Blog.hs  ClosureType.hs  CollapseState.hs  Comment.hs  Currency.hs  Discussion.hs  Issue.hs  Language.hs  License.hs  Markdown.hs  Message.hs  Notification.hs  Permission.hs  Project.hs  ProjectSignup.hs  ResetPassword.hs  (+14 more)
admin-tools/: .launch  .pgStart  .sdc  .sdp  .sdsh  DATABASE-MANAGEMENT.md  EXECUTABLE-ASSURANCE.md  README.md  admin-tools.cabal  config  help-redirect  nix  sdb-fallback.sh  sdb.hs  sdb.sh  sdc  sdp  sdsh
crowdmatch/: README.md  crowdmatch.cabal
crowdmatch/app/: CrowdmatchMain.hs  MakePaymentsMain.hs  crowdmatch.hs
crowdmatch/src/: Crowdmatch.hs
crowdmatch/src/Crowdmatch/: Model.hs  ModelDataTypes.hs  Skeleton.hs  Stripe.hs
crowdmatch/test/: main.hs
definition-lookup-aid/: README.md  scripts.cabal  stack.yaml  unpack.sh
mechanism/: README.md  crowdmatch.cabal
mechanism/src/: Crowdmatch.hs
mechanism/src/Crowdmatch/: Model.hs  ModelDataTypes.hs  Skeleton.hs
mechanism/test/: main.hs
website/: .gitignore  Foundation.hs  Settings.hs  Snowdrift.cabal  sdb.hs  stack.yaml
website/app/: SnowdriftPassword.hs  crowdmatch.hs  devel.hs  make-payments.hs
website/config/: keter.yml  libera.txt  matrix.txt  models  routes  settings.yml  test-settings.yml
website/ops/: run-process-payments
website/src/: Alerts.hs  AppDataTypes.hs  AppTypes.hs  Application.hs  Auth.hs  AuthSite.hs  AuthSiteDataTypes.hs  AuthSiteTypes.hs  Avatar.hs  Css.hs  Discourse.hs  Email.hs  EmailAuth.hs  Foundation.hs  Handler.hs  Import.hs  MarkupInstances.hs  Model.hs  ModelDataTypes.hs  Orphans.hs  Settings.hs  Stripe.hs  TestHooks.hs
website/src/Handler/: About.hs  Common.hs  Dashboard.hs  Discourse.hs  Home.hs  HowItWorks.hs  PaymentHistory.hs  PaymentInfo.hs  Pledge.hs  Privacy.hs  Project.hs  Projects.hs  TH.hs  Terms.hs  Util.hs  Welcome.hs
website/src/Handler/Dashboard/: PaymentInfo.hs
website/src/Import/: NoFoundation.hs
website/src/Model/: Skeleton.hs
website/src/Settings/: StaticFiles.hs
website/static/: snowdrift-intro-en.vtt  snowdrift-intro-fr.vtt
website/static/fonts/league-spartan/: SIL-Open-Font-License.md
website/static/video/: 00-fade_in.m4v
website/templates/: _status-box-temp.silius  _status-flag-temp.sass  auth-layout-wrapper.hamlet  auth-layout.hamlet  auth-layout.sass  dashboard-header.hamlet  default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  default-layout.sass  default-layout.silius  homepage.hamlet  homepage.julius  homepage.lucius
website/templates/base/: .gitattributes  _alerts.sass  _base-env.sass  _base.sass  _layouts.scss  _reset.sass  _variables.silius
website/templates/default/: _alerts.sass  _base.sass  _default.sass  _footer.sass  _layouts.scss  _navbar.sass  _page-tabs.sass  footer.cassius  footer.hamlet  footer.silius  grid.cassius  navbar.cassius  navbar.hamlet  navbar.silius  reset.cassius
website/templates/default-v1/: colors.sass  fonts.silius  footer.silius  layout.silius  navbar.silius
website/templates/default-v2/: _base.sass  _content.sass  _env.silius  _main.sass  footer.hamlet  main-wrapper.hamlet
website/templates/email/: bad-pass-reset.md  bad-user-creation.md  verify-passphrase-reset.md  verify-user-creation.md
website/templates/main/: _base.sass  _env.silius  _footer.sass  _main.sass  _mikuro.sass  _navbar.sass  footer.hamlet  main-wrapper.hamlet  main.hamlet  navbar.hamlet
website/templates/page/: _dashboard.sass  _donate.sass  _how-it-works.sass  _merchandise.sass  _payment-info.sass  _privacy.sass  _snowdrift-project.sass  _sponsors.sass  _terms.sass  _welcome.sass  about.cassius  about.hamlet  about.sass  contact.hamlet  dashboard.cassius  dashboard.hamlet  donate.cassius  donate.hamlet  donate.sass  how-it-works.hamlet  how-it-works.sass  how-it-works.silius  js-licenses.hamlet  merchandise.cassius  merchandise.hamlet  merchandise.sass  merchandise.silius  payment-history.hamlet  payment-info.hamlet  payment-info.julius  privacy.hamlet  privacy.sass  projects.hamlet  projects.sass  search.hamlet  snowdrift-project.cassius  snowdrift-project.hamlet  sponsors.cassius  sponsors.hamlet  sponsors.sass  (+8 more)
website/templates/page/auth/: create-account.hamlet  login.cassius  login.hamlet  login.sass  login.silius  reset-passphrase.hamlet  verify-account.hamlet
website/templates/sass/: default-layout.cassius  default-layout.hamlet  default-layout.silius
website/templates/sass/default/: footer.hamlet  footer.silius  grid.sass  navbar.hamlet  navbar.silius  reset.cassius
website/templates/susy/susy/output/: _shared.scss
website/test/: AlertsSpec.hs  AuthSiteSpec.hs  AuthSpec.hs  DiscourseSpec.hs  Factories.hs  HandlerSpec.hs  MarkupInstancesSpec.hs  SampleSpec.hs  StripeMock.hs  TestImport.hs
website/test/Handler/: CommentSpec.hs  DashboardSpec.hs  HomeSpec.hs
(+635 files in other folders)
