name:              Snowdrift
version:           0.1.4
license:           AGPL-3
license-file:      LICENSE.md
author:            David L. L. Thomas
maintainer:        dev@lists.snowdrift.coop
synopsis:          Infrastructure for Snowdrift fundrasing site.
category:          Web
stability:         Experimental
cabal-version:     >= 1.18
build-type:        Simple
homepage:          https://snowdrift.coop

-- flags -- {{{1
Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag merge
    Description:   Similar to dev, except with -Werror added.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

-- library -- {{{1
library
    default-language:  Haskell98
    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT

    if flag(dev) || flag(library-only)
        ghc-options:   -Wall -O0 -fobject-code
    else
        if flag(merge)
            ghc-options:   -Wall -Werror -O0 -fobject-code
        else
            ghc-options:   -Werror -Wall

    -- exposed-modules -- {{{2
    exposed-modules: Application
                     Data.Filter
                     Data.Order
                     Data.Text.PrettyHtml
                     Data.Tree.Extra
                     Foundation
                     Import
                     Model
                     Model.Application
                     Model.Blog
                     Model.Comment
                     Model.Comment.ActionPermissions
                     Model.Comment.HandlerInfo
                     Model.Comment.Mods
                     Model.Comment.Routes
                     Model.Comment.Sql
                     Model.Currency
                     Model.Discussion
                     Model.Discussion.TH
                     Model.Issue
                     Model.Language
                     Model.Language.TH
                     Model.License
                     Model.License.Internal
                     Model.Markdown
                     Model.Markdown.Diff
                     Model.Notification
                     Model.Notification.Internal
                     Model.Permission
                     Model.Permission.Internal
                     Model.Project
                     Model.Project.Signup
                     Model.Project.Signup.Internal
                     Model.Project.Sql
                     Model.ResetPassword
                     Model.Role
                     Model.Settings
                     Model.Shares
                     Model.SnowdriftEvent
                     Model.SnowdriftEvent.Internal
                     Model.TH
                     Model.Tag
                     Model.Transaction
                     Model.User
                     Model.User.Internal
                     Model.User.Sql
                     Model.Utils
                     Model.ViewType
                     Model.Wiki
                     Model.Wiki.Sql
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     SnowdriftEventHandler
                     Handler.BuildFeed
                     Handler.Comment
                     Handler.Discussion
                     Handler.Home
                     Handler.Donate
                     Handler.Sponsors
                     Handler.HonorPledge
                     Handler.Image
                     Handler.Invitation
                     Handler.JsLicense
                     Handler.MarkdownTutorial
                     Handler.Notification
                     Handler.PostLogin
                     Handler.Privacy
                     Handler.Project
                     Handler.Project.Signup
                     Handler.ProjectBlog
                     Handler.ResetPassword
                     Handler.SnowdriftEvent
                     Handler.ToU
                     Handler.Trademarks
                     Handler.User
                     Handler.User.Comment
                     Handler.Utils
                     Handler.Volunteer
                     Handler.Who
                     Handler.Widget
                     Handler.Wiki
                     Handler.Wiki.Comment
                     View.Comment
                     View.SnowdriftEvent
                     View.Time
                     View.User
                     View.Wiki
                     View.Project
                     View.Project.Signup
                     View.ResetPassword
                     Version
                     Widgets.Doc
                     Widgets.Markdown
                     Widgets.Navbar
                     Widgets.Tag
                     Widgets.Preview
                     Widgets.ProjectPledges
                     TestHandler

    -- other-modules -- {{{2
    other-modules: Model.Comment.Internal
                   Model.Established.Internal
                   Model.Role.Internal
                   Model.Settings.Internal
                   Model.ViewType.Internal

    -- default-extensions -- {{{2
    default-extensions: ConstraintKinds
                DeriveDataTypeable
                DeriveFunctor
                EmptyDataDecls
                ExistentialQuantification
                FlexibleContexts
                FlexibleInstances
                GADTs
                GeneralizedNewtypeDeriving
                LambdaCase
                MultiParamTypeClasses
                MultiWayIf
                NoImplicitPrelude
                NoMonomorphismRestriction
                QuasiQuotes
                OverloadedStrings
                RankNTypes
                RecordWildCards
                ScopedTypeVariables
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

-- Only add version bounds that reflect specific known issues.
-- Provide a comment above the entry explaining any bounds added.

    -- build-depends -- {{{2
    build-depends:
                   -- base bounds reflect a core dependency
                   base >= 4 && < 5
                 , async
                 , attoparsec
                 , authenticate
                 , blaze-builder
                 , blaze-html
                 , blaze-markup
                 , bytestring
                 , conduit
                 , containers
                 , data-default
                 , Diff
                 , directory
                 , esqueleto
                 , fast-logger
                 , github
                 , hit
                 , hjsmin
                 , hourglass
                 , http-conduit
                 , http-types
                 -- Oh yeah!
                 , lens
                 , libravatar
                 , lifted-base
                 , mime-mail
                 , monad-logger
                 , mtl
                 , pandoc
                 , path-pieces
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , process
                 , random
                 , regex-tdfa
                 , resourcet
                 , semigroups
                 , shakespeare
                 , stm
                 , template-haskell
                 , temporary
                 , text
                 , time
                 , titlecase
                 , transformers
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 -- extra caution for our primary dependency on Yesod
                 , yesod >= 1.4 && < 1.5
                 , yesod-auth
                 , yesod-auth-hashdb
                 , yesod-core
                 , yesod-form
                 , yesod-markdown
                 , yesod-newsfeed
                 , yesod-static

-- executable Snowdrift -- {{{1
executable Snowdrift
    if flag(dev)
        ghc-options: -Wall -O0 -fobject-code
    if flag(merge)
        ghc-options: -Wall -Werror -O0 -fobject-code
    if flag(library-only)
        Buildable: False

    default-language:  Haskell98
    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , Snowdrift
                     , yesod

    ghc-options:       -threaded

-- executable SnowdriftProcessPayments -- {{{1
executable SnowdriftProcessPayments
    if flag(library-only)
        Buildable: False
    if flag(dev)
        ghc-options: -Wall -O0 -fobject-code
    if flag(merge)
        ghc-options: -Wall -Werror -O0 -fobject-code

    default-language:  Haskell98
    main-is:           SnowdriftProcessPayments.hs
    hs-source-dirs:    app
    build-depends:     base
                     , blaze-builder
                     , bytestring
                     , fast-logger
                     , lifted-base
                     , monad-logger
                     , mtl
                     , persistent
                     , resourcet
                     , Snowdrift
                     , text
                     , time
                     , yesod

    ghc-options:       -threaded

    default-extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ScopedTypeVariables

-- executable SnowdriftEmailDaemon -- {{{1
executable SnowdriftEmailDaemon
    if flag(dev)
       ghc-options: -Wall -O0 -fobject-code
    if flag(merge)
        ghc-options: -Wall -Werror -O0 -fobject-code
    if flag(library-only)
        Buildable: False
    -- Building on Windows is broken. See
    -- https://github.com/commercialhaskell/stack/issues/466
    if os(windows)
        Buildable: False
    default-language:  Haskell98
    hs-source-dirs: app
    main-is: SnowdriftEmailDaemon.hs
    -- build-depends -- {{{2
    build-depends:     base
                     , authenticate
                     , blaze-builder
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , containers
                     , cmdargs
                     , data-default
                     , Diff
                     , directory
                     , esqueleto
                     , email-validate
                     , fast-logger
                     , hjsmin
                     , hourglass
                     , http-conduit
                     , lens
                     , lifted-base
                     , mime-mail
                     , monad-logger
                     , mtl
                     , path-pieces
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , random
                     , resourcet
                     , semigroups
                     , shakespeare
                     , Snowdrift
                     , stm
                     , template-haskell
                     , text
                     , time
                     , titlecase
                     , transformers
                     , yaml
                     , yesod
                     , yesod-auth
                     , yesod-auth-hashdb
                     , yesod-core
                     , yesod-form
                     , yesod-markdown
                     , yesod-static

    -- default-extensions -- {{{2
    default-extensions: BangPatterns
                ConstraintKinds
                DeriveDataTypeable
                EmptyDataDecls
                ExistentialQuantification
                FlexibleContexts
                FlexibleInstances
                GeneralizedNewtypeDeriving
                LambdaCase
                MultiParamTypeClasses
                MultiWayIf
                NoImplicitPrelude
                QuasiQuotes
                OverloadedStrings
                RankNTypes
                RecordWildCards
                ScopedTypeVariables
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

-- executable sdm -- {{{1
executable sdm
    if flag(dev)
       ghc-options: -Wall -O0 -fobject-code
    if flag(merge)
        ghc-options: -Wall -Werror -O0 -fobject-code
    if flag(library-only)
        Buildable: False

    default-language:  Haskell98
    main-is:           Sdm.hs
    hs-source-dirs:    dev
    build-depends:     base
                     , bytestring
                     , cmdargs
                     , directory
                     , mtl
                     , mwc-random
                     , process
                     , semigroups

-- executable SnowdriftSendmail -- {{{1
executable SnowdriftSendmail
    if flag(dev)
       ghc-options: -Wall -O0 -fobject-code
    if flag(merge)
        ghc-options: -Wall -Werror -O0 -fobject-code
    if flag(library-only)
        Buildable: False

    default-language:  Haskell98
    main-is:           SnowdriftSendmail.hs
    build-depends:     base
                     , bytestring
                     , mime

-- test-suite test -- {{{1
test-suite test
    default-language:  Haskell98
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall -O0 -fobject-code

    other-modules: TestImport
                   BlogTest
                   UserTest
                   MechanismTest
                   CommentTest
                   TestImport.Internal
                   NotifyTest
                   DiscussionTest
                   WikiTest
                   TimedYesodTest
    default-extensions: QuasiQuotes
                TemplateHaskell

    -- build-depends -- {{{2
    build-depends: base
                 , Snowdrift
                 , yesod-markdown
                 , yesod-test
                 , yesod
                 , persistent
                 , monad-logger
                 , monad-control
                 , mtl
                 , semigroups
                 , transformers
                 , bytestring
                 , directory
                 , filepath
                 -- we use spawnProcess in tests and it was added in 1.2
                 , process >= 1.2.0.0
                 , resourcet
                 , time
                 , text
                 , hspec
                 , network-uri
                 , http-types
                 , wai-extra
                 , containers
                 , html-conduit
                 , xml-conduit
                 , esqueleto
                 , HUnit
                 , template-haskell
                 , haskell-src-exts
                 , haskell-src-meta
                 , lifted-base
                 , QuickCheck

-- }}}1

-- Enables folds in vim.
-- vim: fdm=marker cms=\ --\ %s :
