name:              Snowdrift
version:           0.1.4
license:           AGPL-3
license-file:      LICENSE.md
author:            David L. L. Thomas
maintainer:        dev@lists.snowdrift.coop
synopsis:          Infrastructure for the Snowdrift.coop fundraising site.
category:          Web
stability:         Experimental
cabal-version:     >= 1.18
build-type:        Simple
homepage:          https://snowdrift.coop
bug-reports:       https://snowdrift.coop/p/snowdrift/t

-- flags {{{1
Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag merge
    Description:   Similar to dev, except with -Werror added.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

-- library {{{1
library
    default-language:  Haskell2010
    hs-source-dirs: src
    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT

    if flag(dev) || flag(library-only)
        ghc-options:   -Wall -O0 -fobject-code
    else
        if flag(merge)
            ghc-options:   -Wall -Werror -O0 -fobject-code
        else
            ghc-options:   -Werror -Wall

    exposed-modules:
        Application
        Css
        Data.Filter
        Data.Order
        Data.Text.PrettyHtml
        Data.Tree.Extra
        DeprecatedBootstrap
        Foundation
        Handler.BuildFeed
        Handler.Comment
        Handler.Common
        Handler.Discussion
        Handler.Donate
        Handler.HonorPledge
        Handler.Image
        Handler.Invitation
        Handler.JsLicense
        Handler.MarkdownTutorial
        Handler.Notification
        Handler.PostLogin
        Handler.Privacy
        Handler.Project
        Handler.Project.Signup
        Handler.ProjectBlog
        Handler.ResetPassword
        Handler.Simple
        Handler.SnowdriftEvent
        Handler.Sponsors
        Handler.ToU
        Handler.Trademarks
        Handler.User
        Handler.User.Comment
        Handler.Utils
        Handler.Volunteer
        Handler.Who
        Handler.Widget
        Handler.Wiki
        Handler.Wiki.Comment
        Import
        Import.NoFoundation
        Local.Esqueleto
        Local.Github
        Local.Ord
        Mechanism
        Model
        Model.Application
        Model.Blog
        Model.Comment
        Model.Comment.ActionPermissions
        Model.Comment.HandlerInfo
        Model.Comment.Mods
        Model.Comment.Routes
        Model.Comment.Sql
        Model.Count
        Model.Currency
        Model.Discussion
        Model.Discussion.TH
        Model.Issue
        Model.Language
        Model.Language.TH
        Model.License
        Model.License.Internal
        Model.Markdown
        Model.Markdown.Diff
        Model.Notification
        Model.Notification.Internal
        Model.Permission.Internal
        Model.Project
        Model.Project.Signup
        Model.Project.Signup.Internal
        Model.Project.Sql
        Model.ResetPassword
        Model.Role
        Model.Settings
        Model.Shares
        Model.SnowdriftEvent
        Model.SnowdriftEvent.Internal
        Model.TH
        Model.Tag
        Model.Transaction
        Model.User
        Model.User.Internal
        Model.User.Sql
        Model.Utils
        Model.ViewType
        Model.Wiki
        Model.Wiki.Sql
        Settings
        Settings.Development
        Settings.StaticFiles
        SnowdriftEventHandler
        Version
        View.Comment
        View.Project
        View.Project.Signup
        View.ResetPassword
        View.SnowdriftEvent
        View.Time
        View.User
        View.Wiki
        Widgets.Doc
        Widgets.Markdown
        Widgets.Navbar
        Widgets.Preview
        Widgets.Search
        Widgets.Tag
        Widgets.UserPledges
        WrappedValues

    -- other-modules {{{2
    other-modules:
        Migrations
        Model.Comment.Internal
        Model.Established.Internal
        Model.Role.Internal
        Model.Settings.Internal
        Model.ViewType.Internal

    -- default-extensions {{{2
    default-extensions: ConstraintKinds
                DeriveDataTypeable
                DeriveFunctor
                EmptyDataDecls
                ExistentialQuantification
                FlexibleContexts
                FlexibleInstances
                GADTs
                GeneralizedNewtypeDeriving
                LambdaCase
                MultiParamTypeClasses
                MultiWayIf
                NoImplicitPrelude
                NoMonomorphismRestriction
                QuasiQuotes
                OverloadedStrings
                RankNTypes
                RecordWildCards
                ScopedTypeVariables
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

-- Only add version bounds that reflect specific known issues.
-- Provide a comment above the entry explaining any bounds added.

    -- build-depends {{{2
    build-depends:
                   -- base bounds reflect a core dependency
                   base >= 4 && < 5
                 , async
                 , attoparsec
                 , authenticate
                 , blaze-builder
                 , blaze-html
                 , blaze-markup
                 , bytestring
                 , conduit
                 , containers
                 , data-default
                 , Diff
                 , directory
                 , errors
                 , esqueleto
                 , fast-logger
                 , file-embed
                 , github
                 , ghci-runner
                 , hit
                 , hjsmin
                 , hourglass
                 , http-conduit
                 , http-types
                 -- Oh yeah!
                 , lens
                 , libravatar
                 , lifted-base
                 , mime-mail
                 , monad-logger
                 , mtl
                 , pandoc
                 , path-pieces
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , process
                 , random
                 , regex-tdfa
                 , resourcet
                 , semigroups
                 , shakespeare
                 , stm
                 , template-haskell
                 , temporary
                 , text
                 , time
                 , titlecase
                 , transformers
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 -- extra caution for our primary dependency on Yesod
                 , yesod >= 1.4 && < 1.5
                 , yesod-auth
                 , yesod-auth-hashdb
                 , yesod-core
                 , yesod-form
                 , yesod-markdown
                 , yesod-newsfeed
                 , yesod-static

-- executable Snowdrift {{{1
executable Snowdrift
    if flag(dev)
        ghc-options: -Wall -O0 -fobject-code
    if flag(merge)
        ghc-options: -Wall -Werror -O0 -fobject-code
    if flag(library-only)
        Buildable: False

    default-language:  Haskell2010
    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , Snowdrift
                     , yesod

    ghc-options:       -threaded

-- executable SnowdriftProcessPayments {{{1
executable SnowdriftProcessPayments
    if flag(library-only)
        Buildable: False
    if flag(dev)
        ghc-options: -Wall -O0 -fobject-code
    if flag(merge)
        ghc-options: -Wall -Werror -O0 -fobject-code

    default-language:  Haskell2010
    main-is:           SnowdriftProcessPayments.hs
    hs-source-dirs:    app
    build-depends:     base
                     , blaze-builder
                     , bytestring
                     , fast-logger
                     , lifted-base
                     , monad-logger
                     , mtl
                     , persistent
                     , resourcet
                     , Snowdrift
                     , text
                     , time
                     , yesod

    ghc-options:       -threaded

    default-extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ScopedTypeVariables

-- executable SnowdriftEmailDaemon {{{1
executable SnowdriftEmailDaemon
    if flag(dev)
       ghc-options: -Wall -O0 -fobject-code
    if flag(merge)
        ghc-options: -Wall -Werror -O0 -fobject-code
    if flag(library-only)
        Buildable: False
    -- Building on Windows is broken. See
    -- https://github.com/commercialhaskell/stack/issues/466
    if os(windows)
        Buildable: False
    default-language:  Haskell2010
    hs-source-dirs: app
    main-is: SnowdriftEmailDaemon.hs
    -- build-depends {{{2
    build-depends:     base
                     , authenticate
                     , blaze-builder
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , containers
                     , cmdargs
                     , data-default
                     , Diff
                     , directory
                     , esqueleto
                     , email-validate
                     , fast-logger
                     , hjsmin
                     , hourglass
                     , http-conduit
                     , lens
                     , lifted-base
                     , mime-mail
                     , monad-logger
                     , mtl
                     , path-pieces
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , random
                     , resourcet
                     , semigroups
                     , shakespeare
                     , Snowdrift
                     , stm
                     , template-haskell
                     , text
                     , time
                     , titlecase
                     , transformers
                     , yaml
                     , yesod
                     , yesod-auth
                     , yesod-auth-hashdb
                     , yesod-core
                     , yesod-form
                     , yesod-markdown
                     , yesod-static

    -- default-extensions {{{2
    default-extensions: BangPatterns
                ConstraintKinds
                DeriveDataTypeable
                EmptyDataDecls
                ExistentialQuantification
                FlexibleContexts
                FlexibleInstances
                GeneralizedNewtypeDeriving
                LambdaCase
                MultiParamTypeClasses
                MultiWayIf
                NoImplicitPrelude
                QuasiQuotes
                OverloadedStrings
                RankNTypes
                RecordWildCards
                ScopedTypeVariables
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

-- executable sdm {{{1
executable sdm
    if flag(dev)
       ghc-options: -Wall -O0 -fobject-code
    if flag(merge)
        ghc-options: -Wall -Werror -O0 -fobject-code
    if flag(library-only)
        Buildable: False

    default-language:  Haskell2010
    main-is:           Sdm.hs
    hs-source-dirs:    dev
    build-depends:     base
                     , bytestring
                     , cmdargs
                     , directory
                     , mtl
                     , mwc-random
                     , process
                     , semigroups

-- executable sendmail-mock {{{1
executable sendmail-mock
    if flag(dev)
       ghc-options: -Wall -O0 -fobject-code
    if flag(merge)
        ghc-options: -Wall -Werror -O0 -fobject-code
    if flag(library-only)
        Buildable: False

    hs-source-dirs: tests
    default-language:  Haskell2010
    main-is:           sendmail-mock.hs
    build-depends:     base
                     , bytestring
                     , mime

-- test-suite test {{{1
test-suite test
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall -O0 -fobject-code

    other-modules:
        BlogTest
        CommentTest
        DiscussionTest
        MechanismTest
        NotifyTest
        PPrint
        TestHandler
        TestImport
        TestImport.Internal
        TimedYesodTest
        UserTest
        WikiTest
    default-extensions: QuasiQuotes
                TemplateHaskell
                OverloadedStrings

    -- build-depends {{{2
    build-depends: base
                 , bytestring
                 , containers
                 , directory
                 , esqueleto
                 , fast-logger
                 , filepath
                 , haskell-src-exts
                 , haskell-src-meta
                 , hspec
                 , html-conduit
                 , http-types
                 , HUnit
                 , lifted-base
                 , monad-control
                 , monad-logger
                 , mtl
                 , network-uri
                 , persistent
                 -- we use spawnProcess in tests and it was added in 1.2
                 , process >= 1.2.0.0
                 , QuickCheck
                 , resourcet
                 , semigroups
                 , Snowdrift
                 , stm
                 , template-haskell
                 , text
                 , time
                 , transformers
                 , wai-extra
                 , wai-logger
                 , xml-conduit
                 , yesod
                 , yesod-core
                 , yesod-markdown
                 , yesod-test

-- }}}1

-- Enables folds in vim.
-- vim: fdm=marker cms=\ --\ %s :
