name:              Snowdrift
version:           0.1.4
license:           AGPL-3
license-file:      LICENSE.md
author:            David L. L. Thomas
maintainer:        dev@lists.snowdrift.coop
synopsis:          Infrastructure for the Snowdrift.coop fundraising site.
category:          Web
stability:         Experimental
cabal-version:     >= 1.18
build-type:        Simple
homepage:          https://snowdrift.coop
bug-reports:       https://snowdrift.coop/p/snowdrift/t

-- flags {{{1
Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag merge
    Description:   Similar to dev, except with -Werror added.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

-- library {{{1
library
    default-language:  Haskell2010
    hs-source-dirs: src
    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT

    if flag(dev) || flag(library-only)
        ghc-options:   -Wall -O0 -fobject-code
    else
        if flag(merge)
            ghc-options:   -Wall -Werror -O0 -fobject-code
        else
            ghc-options:   -Werror -Wall

    -- exposed-modules {{{2
    exposed-modules:
        Application
        Avatar
        Css
        Data.Filter
        Data.Order
        Data.Text.PrettyHtml
        Data.Tree.Extra
        Dev
        DeprecatedBootstrap
        Foundation
        Handler.BuildFeed
        Handler.Common
        Handler.HonorPledge
        Handler.Image
        Handler.Invitation
        Handler.JsLicenses
        Handler.MarkdownTutorial
        Handler.NewDesign
        Handler.PostLogin
        Handler.Project
        Handler.ResetPassphrase
        Handler.Simple
        Handler.TH
        Handler.User
        Handler.User.Balance
        Handler.User.ChangePassphrase
        Handler.User.ConfirmDelete
        Handler.User.Delete
        Handler.User.Edit
        Handler.User.EstEligible
        Handler.User.ResetPassphrase
        Handler.User.User
        Handler.User.Users
        Handler.User.Utils
        Handler.User.VerifyEmail
        Handler.Utils
        Handler.Volunteer
        Handler.Who
        Handler.Widget
        Import
        Import.NoFoundation
        Local.Esqueleto
        Local.Github
        Local.Ord
        Model
        Model.Application
        Model.Count
        Model.Currency
        Model.Discussion.TH
        Model.Issue
        Model.Language
        Model.Language.TH
        Model.License
        Model.License.Internal
        Model.Markdown
        Model.Markdown.Diff
        Model.Permission.Internal
        Model.Project
        Model.Project.Signup
        Model.Project.Signup.Internal
        Model.ResetPassphrase
        Model.Role
        Model.Settings
        Model.Shares
        Model.TH
        Model.Tag
        Model.Transaction
        Model.User
        Model.User.Internal
        Model.User.Sql
        Model.Utils
        Model.ViewType
        Model.Volunteer
        Settings
        Settings.Development
        Settings.StaticFiles
        Version
        View.Project
        View.Project.Signup
        View.ResetPassphrase
        View.Time
        View.User
        Widgets.Markdown
        Widgets.Navbar
        Widgets.Preview
        Widgets.Search
        Widgets.Tag
        Widgets.UserPledges
        WrappedValues

    -- other-modules {{{2
    other-modules:
        Migrations
        Model.Established.Internal
        Model.Role.Internal
        Model.Settings.Internal
        Model.ViewType.Internal

    -- default-extensions {{{2
    default-extensions: ConstraintKinds
                DeriveDataTypeable
                DeriveFunctor
                EmptyDataDecls
                ExistentialQuantification
                FlexibleContexts
                FlexibleInstances
                GADTs
                GeneralizedNewtypeDeriving
                LambdaCase
                MultiParamTypeClasses
                MultiWayIf
                NoImplicitPrelude
                NoMonomorphismRestriction
                QuasiQuotes
                OverloadedStrings
                RankNTypes
                RecordWildCards
                ScopedTypeVariables
                TemplateHaskell
                TupleSections
                TypeFamilies
                ViewPatterns

-- Only add version bounds that reflect specific known issues.
-- Provide a comment above the entry explaining any bounds added.

    -- build-depends {{{2
    build-depends:
                   -- base bounds reflect a core dependency
                   base >= 4 && < 5
                 , async
                 , attoparsec
                 , authenticate
                 , blaze-builder
                 , blaze-html
                 , blaze-markup
                 , bytestring
                 , conduit
                 , containers
                 , data-default
                 , Diff
                 , directory
                 , errors
                 , esqueleto
                 , fast-logger
                 , file-embed
                 , github
                 , ghci-runner
                 , hit
                 , hjsmin
                 , hourglass
                 , http-conduit
                 , http-types
                 -- Oh yeah!
                 , lens
                 , libravatar
                 , lifted-base
                 , mime-mail
                 , monad-logger
                 , mtl
                 , pandoc
                 , path-pieces
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , process
                 , random
                 , regex-tdfa
                 , resourcet
                 , semigroups
                 , shakespeare
                 , stm
                 , template-haskell
                 , temporary
                 , text
                 , time
                 , titlecase
                 , transformers
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 -- extra caution for our primary dependency on Yesod
                 , yesod >= 1.4 && < 1.5
                 , yesod-auth
                 , yesod-auth-hashdb
                 , yesod-core
                 , yesod-form
                 , yesod-markdown
                 , yesod-newsfeed
                 , yesod-static

-- executable Snowdrift {{{1
executable Snowdrift
    if flag(dev)
        ghc-options: -Wall -O0 -fobject-code
    if flag(merge)
        ghc-options: -Wall -Werror -O0 -fobject-code
    if flag(library-only)
        Buildable: False

    default-language:  Haskell2010
    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , Snowdrift
                     , yesod

    ghc-options:       -threaded

-- executable sendmail-mock {{{1
executable sendmail-mock
    if flag(dev)
       ghc-options: -Wall -O0 -fobject-code
    if flag(merge)
        ghc-options: -Wall -Werror -O0 -fobject-code
    if flag(library-only)
        Buildable: False

    hs-source-dirs: tests
    default-language:  Haskell2010
    main-is:           sendmail-mock.hs
    build-depends:     base
                     , bytestring
                     , mime

-- test-suite test {{{1
test-suite test
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall -O0 -fobject-code

    other-modules:
        BlogTest
        CommentTest
        DiscussionTest
        NotifyTest
        PPrint
        TestHandler
        TestImport
        TimedYesodTest
        UserTest
        WikiTest
    default-extensions: QuasiQuotes
                TemplateHaskell
                OverloadedStrings

    -- build-depends {{{2
    build-depends: base
                 , bytestring
                 , containers
                 , directory
                 , esqueleto
                 , fast-logger
                 , filepath
                 , haskell-src-exts
                 , haskell-src-meta
                 , hspec
                 , html-conduit
                 , http-types
                 , HUnit
                 , lifted-base
                 , monad-control
                 , monad-logger
                 , mtl
                 , network-uri
                 , persistent
                 -- we use spawnProcess in tests and it was added in 1.2
                 , process >= 1.2.0.0
                 , QuickCheck
                 , resourcet
                 , semigroups
                 , Snowdrift
                 , stm
                 , template-haskell
                 , text
                 , time
                 , transformers
                 , wai-extra
                 , wai-logger
                 , xml-conduit
                 , yesod
                 , yesod-core
                 , yesod-markdown
                 , yesod-test

-- }}}1

-- Enables folds in vim.
-- vim: fdm=marker cms=\ --\ %s :
